# chessbot-native

./: .gitignore  all  bash.bash  com.chessbot.native.json  com.chessbot.native.mozilla.json  example.js  file  file2  find1  find2  find3  find4  find5  manifest.json  old-program.js  package.json  pnpm-lock.yaml  program.js  program.py  program.ts  stop  tsconfig.json
backend/: .gitignore  com.chessbot.native.json
backend/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
backend/.direnv/flake-inputs/: ch82i0ka6gw80amas17rfy392yyidpsf-source  wxl9axmmci2sps88n2wwlv09g4vq6c3b-source
backend/src/: info_parser.rs  ktree.rs
extension/: .gitignore  .swcrc  Makefile  flake.nix  manifest.json  package.json  pnpm-lock.yaml
extension/src/: content.ts  router.ts
hosts/chromium/: com.chessbot.native.json
hosts/firefox/: com.chessbot.native.json
src/: background.ts  content2.ts  move-indicator.ts  period-to-number.ts  pgn.rs  wait-for-element.ts
src/backend/: flake.nix  ktree.ts  program.ts
src/client/: background.ts  content.ts  get-coords.ts  move-indicator.ts  wait-for-element.ts
src/rust-backend/: Cargo.toml
src/rust-backend/src/: controller.rs  info_parser.rs  lib.rs  main.rs  message_handler.rs  messages.rs  opening.rs  pgn.rs
src/rust-backend/src/ktree/: error.rs  mod.rs  ser.rs
utils/: parse-stockfish.js
var/: cache.ktree
