[package]
name = "chess_bot"
version = "0.1.0"
edition = "2021"
default-run = "chess_bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
nom = "7.1.3"
pgn-reader = "0.25.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
shakmaty = "0.26.0"
